# crypto-ai-bot

./: .replit  accuracy.json  accuracy_tracker.py  backtest_results.json  backtest_summary.json  backtester.py  binance_trade.py  download_data.py  indicator_check.py  indicators.py  main.py  news_sentiment.py  plotting_utils.py  portfolio.json  portfolio_manager.py  price_data.py  pyproject.toml  requirements.txt  rule_sentiment.py  signal_logic.py  trade_history.json  trade_logger.py  whatsapp_alert.py
strategy/: bos.py  macd.py  order_block.py
templates/: index.html
